# lab-evals

./: README.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  student.py  ta.py  user.py
backend/app/constants/: __init__.py  enums.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  security.py
backend/app/models/: __init__.py  enrollment.py  evaluation.py  question.py  subject.py  user.py
backend/app/schemas/: __init__.py  enrollment.py  evaluation.py  question.py  subject.py  user.py
backend/app/services/: __init__.py  enrollment_service.py  evaluation_service.py  user_service.py
frontend/: .env.example  Makefile  index.html  openapi.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: admin.ts  auth.ts  client.ts  student.ts  ta.ts
frontend/src/assets/: main.css
frontend/src/auth/: google.ts
frontend/src/components/common/: AppBadge.vue  AppButton.vue  AppInput.vue  AppSelect.vue  AppSpinner.vue  AppTable.vue
frontend/src/components/layout/: AdminLayout.vue  StudentLayout.vue  TALayout.vue
frontend/src/router/: index.ts
frontend/src/store/: auth.ts
frontend/src/types/: api.ts
frontend/src/views/: LoginView.vue
frontend/src/views/admin/: EnrollmentsView.vue  EvaluationsView.vue  QuestionsView.vue  SubjectsView.vue  UsersView.vue
frontend/src/views/student/: ProfileView.vue  QuestionsView.vue
(+5 files in other folders)
